dev/book-info-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-info-service-deployments
  namespace: bozo-book-library-dev
spec:
  replicas: 1
  
  selector: 
    matchLabels:
      app: book-info-service
      namespace: bozo-book-library-dev
  template:
    metadata:
      labels: 
        app: book-info-service
        namespace: bozo-book-library-dev
    spec:
      serviceAccountName: bozo-book-service-account
      containers:
        - name: book-info-service
          image: abvijaykumar/bozo-bookinfo-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: book-info-service-svc
  namespace: bozo-book-library-dev

spec:
  type: NodePort
  selector: 
    app: book-info-service
  
  ports:
    - name: http
      port: 8080
      targetPort: 8080
