dev/book-library-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-library-postgres-db
  namespace: bozo-book-library-dev
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: book-library-postgres-db
  template:
    metadata:
      labels:
        app: book-library-postgres-db
    spec:
      containers:
        - name: postgres
          image: postgres:10.4
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName:  book-library-postgres-db-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: book-library-postgres-db-svc
  namespace: bozo-book-library-dev
  labels:
    app: book-library-postgres-db-svc
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
   app: book-library-postgres-db
