dev/book-library-service-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-library-service-deployments
  namespace: bozo-book-library-dev
spec:
  replicas: 1
  
  selector: 
    matchLabels:
      app: book-library-service
      namespace: bozo-book-library-dev
  template:
    metadata:
      labels: 
        app: book-library-service
        namespace: bozo-book-library-dev
    spec:
      serviceAccountName: bozo-book-service-account
      containers:
        - name: book-library-service
          image: abvijaykumar/bozo-book-library-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: book-library-service-svc
  namespace: bozo-book-library-dev

spec:
  selector: 
    app: book-library-service
  
  ports:
    - name: http
      port: 8080
      targetPort: 8080
