dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: bozo-book-library-ingress
  namespace: bozo-book-library-dev
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  book-library-ui-svc
            port: 
              number: 80
      - path: /bookinfo
        pathType: Prefix
        backend:
          service:
            name:  book-info-service-svc
            port: 
              number: 8080
      - path: /booklib
        pathType: Prefix
        backend:
          service:
            name:  book-library-service-svc
            port: 
              number: 8080
